--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,18 @@ margin:0px;
     background-image: url('photo1.jpg');
     background-size: 100% 100%;
 }
-
+#purshase-date{
+color: grey;
+    font-family: sans-serif;
+    margin: 0px;
+    padding: 0px;
+    font-size: 0.8em;
+    margin-top: 70%;
+}
 .container {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 
